log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 08:17:12 PM UTC: 
 tests:  0|6
total_score: 0/70
65d3df4
Wed 29 Mar 2023 08:46:58 PM UTC: 
 arraylist.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:15: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList *’ {aka ‘struct ArrayList *’} [-Werror=incompatible-pointer-types]
   15 |   aList->data = (ArrayList*) malloc(sizeof(ArrayList));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
bcc857c
Wed 29 Mar 2023 08:47:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:10: error: ‘data’ undeclared (first use in this function)
   15 |   aList *data = (aList*) malloc(sizeof(aList));
      |          ^~~~
arraylist.c:15:10: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:15:24: error: expected expression before ‘)’ token
   15 |   aList *data = (aList*) malloc(sizeof(aList));
      |                        ^
Compilation failed
4dffbcd
Wed 29 Mar 2023 08:47:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:17: error: ‘data’ undeclared (first use in this function)
   15 |   aList->data = data;
      |                 ^~~~
arraylist.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
329b186
Wed 29 Mar 2023 08:48:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c:13:12: error: conflicting types for ‘createList’
   13 | ArrayList *createList(void *data) {
      |            ^~~~~~~~~~
In file included from arraylist.c:4,
                 from test.c:5:
arraylist.h:6:12: note: previous declaration of ‘createList’ was here
    6 | ArrayList *createList(void);
      |            ^~~~~~~~~~
test.c: In function ‘test_create’:
test.c:77:20: error: too few arguments to function ‘createList’
   77 |     ArrayList* l = createList();
      |                    ^~~~~~~~~~
In file included from test.c:5:
arraylist.c:13:12: note: declared here
   13 | ArrayList *createList(void *data) {
      |            ^~~~~~~~~~
test.c: In function ‘test_all’:
test.c:325:20: error: too few arguments to function ‘createList’
  325 |     ArrayList *l = createList();
      |                    ^~~~~~~~~~
In file included from test.c:5:
arraylist.c:13:12: note: declared here
   13 | ArrayList *createList(void *data) {
      |            ^~~~~~~~~~
Compilation failed
17eaf36
Wed 29 Mar 2023 08:50:24 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:44: error: ‘Arraylist’ undeclared (first use in this function); did you mean ‘ArrayList’?
   15 |   aList->data = (ArrayList*) malloc(sizeof(Arraylist));
      |                                            ^~~~~~~~~
      |                                            ArrayList
arraylist.c:15:44: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8b7b373
Wed 29 Mar 2023 08:50:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:15: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList *’ {aka ‘struct ArrayList *’} [-Werror=incompatible-pointer-types]
   15 |   aList->data = (ArrayList*) malloc(sizeof(ArrayList));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
bbd6d90
Wed 29 Mar 2023 08:52:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
388c29d
